--- a/index.html
+++ b/index.html
@@ -254,5 +254,70 @@
 
     elements.forEach(el => observer.observe(el));
   </script>
+<!-- ===================== -->
+<!--      PORTFOLIO        -->
+<!-- ===================== -->
+<section id="portfolio" style="padding: 60px 0; background-color: #f9f9f7;">
+  <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
+    <h2 style="font-size: 2rem; color: #2f3e35; margin-bottom: 40px; text-align: center;">Portfolio</h2>
+
+    <!-- PROGETTO TESI -->
+    <div style="margin-bottom: 80px;">
+      <h3 style="font-size: 1.5rem; color: #2f3e35;">Progetto di Tesi — Design come pratica di riparazione</h3>
+      <div class="portfolio-slider" style="display: flex; overflow-x: auto; gap: 10px; scroll-behavior: smooth;">
+        <img src="progetto_tesi/Cover.jpg" alt="Cover Tesi" style="height: 400px; border-radius: 12px;">
+      </div>
+      <p style="margin-top: 15px; color: #4f5d4f; line-height: 1.6;">
+        La mia tesi esplora il design come pratica di riparazione, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologica. Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione. Il lavoro propone il design come atto di cura, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
+      </p>
+      <a href="progetto_tesi/tesi_Lucrezia_Dori.pdf" download
+         style="display: inline-block; margin-top: 15px; padding: 10px 20px; background-color: #8fae91; color: white; border-radius: 8px; text-decoration: none; transition: background-color 0.3s;">
+         📄 Scarica la tesi
+      </a>
+    </div>
+
+    <!-- PROGETTO FOTOGRAFICO -->
+    <div style="margin-bottom: 80px;">
+      <h3 style="font-size: 1.5rem; color: #2f3e35;">Progetto Fotografico — Autoritratti e luce</h3>
+      <div class="portfolio-slider" style="display: flex; overflow-x: auto; gap: 10px; scroll-behavior: smooth;">
+        <img src="progetto_fotografia/IMG1.jpg" alt="Fotografia 1" style="height: 400px; border-radius: 12px;">
+        <img src="progetto_fotografia/IMG2.jpg" alt="Fotografia 2" style="height: 400px; border-radius: 12px;">
+        <img src="progetto_fotografia/IMG3.jpg" alt="Fotografia 3" style="height: 400px; border-radius: 12px;">
+        <!-- puoi aggiungere altre IMG4, IMG5, ecc. -->
+      </div>
+      <p style="margin-top: 15px; color: #4f5d4f; line-height: 1.6;">
+        Autoritratti realizzati utilizzando specchi per riflettere la luce naturale. La luce del sole rimbalza e genera riflessi completamente bianchi: un non-colore che racchiude tutti i colori dello spettro.
+        <br><em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo…”</em> — <strong>Herman Melville, Moby Dick, cap. 42</strong>
+        <br>Le opere hanno partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color: #6b8e75;">Premio Combat Prize</a>.
+      </p>
+    </div>
+
+    <!-- PREMIO ROMETTI -->
+    <div style="margin-bottom: 80px;">
+      <h3 style="font-size: 1.5rem; color: #2f3e35;">Premio Rometti — Ceramica ispirata alla natura</h3>
+      <div class="portfolio-slider" style="display: flex; overflow-x: auto; gap: 10px; scroll-behavior: smooth;">
+        <img src="premio_rometti_ceramica/IMG1.jpg" alt="Ceramica 1" style="height: 400px; border-radius: 12px;">
+        <img src="premio_rometti_ceramica/IMG2.jpg" alt="Ceramica 2" style="height: 400px; border-radius: 12px;">
+        <img src="premio_rometti_ceramica/IMG3.jpg" alt="Ceramica 3" style="height: 400px; border-radius: 12px;">
+      </div>
+      <p style="margin-top: 15px; color: #4f5d4f; line-height: 1.6;">
+        Progetto realizzato per il bando Rometti, in Umbria. L’opera si ispira alle forme vegetali fotografate da Karl Blossfeldt, reinterpretando il fiore dell’equiseto come vaso tornito. La materia naturale dell’argilla diventa forma simbolica, un equilibrio tra artificio e natura.
+      </p>
+    </div>
+
+    <!-- PROGETTO OREFICERIA -->
+    <div style="margin-bottom: 80px;">
+      <h3 style="font-size: 1.5rem; color: #2f3e35;">Progetto di Oreficeria — Forme naturali marine</h3>
+      <div class="portfolio-slider" style="display: flex; overflow-x: auto; gap: 10px; scroll-behavior: smooth;">
+        <img src="progetto_oreficeria/IMG1.jpg" alt="Anello 1" style="height: 400px; border-radius: 12px;">
+        <img src="progetto_oreficeria/IMG2.jpg" alt="Anello 2" style="height: 400px; border-radius: 12px;">
+        <img src="progetto_oreficeria/IMG3.jpg" alt="Anello 3" style="height: 400px; border-radius: 12px;">
+      </div>
+      <p style="margin-top: 15px; color: #4f5d4f; line-height: 1.6;">
+        Serie di anelli realizzati a mano con la tecnica della cera persa, ispirati a forme organiche marine. Ogni pezzo rappresenta un piccolo ecosistema di materia e luce.
+      </p>
+    </div>
+  </div>
+</section>
 </body>
 </html>
