--- a/index.html
+++ b/index.html
@@ -1,204 +1,128 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio — Lucrezia Dori</title>
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #222;
-      background-color: #fafafa;
-      line-height: 1.6;
-    }
+<!-- ===================== -->
+<!--       PORTFOLIO      -->
+<!-- ===================== -->
+<section id="portfolio">
+  <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
+    <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
 
-    h1, h2 {
-      text-align: center;
-      font-weight: 400;
-    }
-
-    h1 {
-      font-size: 2.2rem;
-      margin-top: 60px;
-    }
-
-    h2 {
-      font-size: 1.6rem;
-      margin-top: 40px;
-    }
-
-    .project {
-      max-width: 900px;
-      margin: 60px auto;
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-      overflow: hidden;
-      padding: 40px;
-    }
-
-    .description {
-      margin-bottom: 20px;
-    }
-
-    .slider {
-      position: relative;
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      gap: 10px;
-    }
-
-    .slider img {
-      width: 100%;
-      max-height: 600px;
-      object-fit: cover;
-      border-radius: 12px;
-      scroll-snap-align: center;
-    }
-
-    .nav-button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(255,255,255,0.8);
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 20px;
-    }
-
-    .prev { left: 10px; }
-    .next { right: 10px; }
-
-    a {
-      color: #333;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .download-btn {
-      display: inline-block;
-      background: #222;
-      color: #fff;
-      padding: 10px 16px;
-      border-radius: 8px;
-      margin-top: 15px;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
-
-    .download-btn:hover {
-      background: #444;
-    }
-
-    footer {
-      text-align: center;
-      padding: 40px;
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    footer a {
-      color: #222;
-      font-weight: 500;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Lucrezia Dori — Portfolio</h1>
-
-  <!-- TESI -->
-  <section class="project" id="tesi">
-    <h2>Tesi — “Design come pratica di riparazione”</h2>
-    <div class="description">
+    <!-- PROGETTO TESI -->
+    <div class="portfolio-item">
+      <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
+      <div class="portfolio-slider">
+        <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+      </div>
       <p>
-        La mia tesi esplora il design come pratica di riparazione, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. 
-        Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione. 
-        Il lavoro propone il design come atto di cura, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
+        La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico, ma anche come processo sociale, culturale ed ecologico. 
+        Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, 
+        ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione.
+      </p>
+      <p>
+        Il progetto propone il design come <em>atto di cura</em>, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità. 
+        La ricerca si muove tra riflessione teorica e sperimentazione progettuale, individuando nel gesto del riparare un valore poetico e politico, 
+        un modo per comprendere la complessità del nostro tempo e generare nuove forme di equilibrio tra uomo e natura.
+      </p>
+      <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
+    </div>
+
+    <!-- PROGETTO FOTOGRAFIA -->
+    <div class="portfolio-item">
+      <h3>Progetto Fotografico — Autoritratti e Luce</h3>
+      <div class="portfolio-slider">
+        <img src="progetto1_fotografia/cover.jpg">
+        <img src="progetto1_fotografia/img2.jpg">
+        <img src="progetto1_fotografia/img3.jpg">
+        <img src="progetto1_fotografia/img4.jpg">
+        <img src="progetto1_fotografia/img5.jpg">
+        <img src="progetto1_fotografia/img6.jpg">
+        <img src="progetto1_fotografia/img9.jpg">
+        <img src="progetto1_fotografia/img10.jpg">
+        <img src="progetto1_fotografia/img12.jpg">
+        <img src="progetto1_fotografia/img13.jpg">
+        <img src="progetto1_fotografia/img14.jpg">
+      </div>
+      <p>
+        Il progetto nasce da una riflessione sulla <strong>radioestesia</strong> — una pratica antica che consiste nel tentare di percepire radiazioni o energie invisibili attraverso strumenti come il pendolo o la verga. 
+        Nata come ricerca sul campo dell’invisibile, la radioestesia evoca un gesto percettivo, un ascolto silenzioso e intuitivo della materia e della luce.
+      </p>
+      <p>
+        Attraverso una serie di <em>autoritratti</em>, utilizzo uno specchio come strumento per riflettere la luce del sole. 
+        Il riflesso, completamente bianco, diventa un <strong>non-colore</strong>, che però contiene in sé tutti i colori dello spettro. 
+        In stampa, il bianco si trasforma in assenza visiva, evocando un’immagine che esiste soltanto come presenza luminosa: 
+        un dialogo tra corpo, spazio e materia immateriale.
+      </p>
+      <p>
+        <em>
+          “È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, 
+          quando contempliamo le bianche profondità della Via Lattea? 
+          O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; 
+          è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – 
+          un incolore onnicolore d’ateismo dal quale rifuggiamo?…”
+        </em><br>
+        — <strong>Herman Melville, Moby Dick, capitolo 42</strong>
+      </p>
+      <p>
+        Il progetto ha partecipato al 
+        <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
       </p>
     </div>
 
-    <div class="slider">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/progetto_tesi/Cover.jpg" alt="Cover Tesi">
-    </div>
-
-    <a class="download-btn" href="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/progetto_tesi/lucrezia_dori_tesi.pdf" download>Scarica la tesi</a>
-  </section>
-
-  <!-- PROGETTO 1 - FOTOGRAFIA -->
-  <section class="project" id="fotografia">
-    <h2>Progetto Fotografico — “Bianco”</h2>
-    <div class="description">
+    <!-- PREMIO ROMETTI -->
+    <div class="portfolio-item">
+      <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
+      <div class="portfolio-slider">
+        <img src="premio_rometti_ceramica/cover.jpg">
+        <img src="premio_rometti_ceramica/img1.jpg">
+        <img src="premio_rometti_ceramica/img3.jpg">
+        <img src="premio_rometti_ceramica/img4.jpg">
+        <img src="premio_rometti_ceramica/img5.jpg">
+        <img src="premio_rometti_ceramica/img6.jpg">
+      </div>
       <p>
-        Serie di autoritratti in cui la luce del sole rimbalza su uno specchio, generando un riflesso completamente bianco: un non-colore che tuttavia contiene in sé tutti i colori dello spettro. 
-        Il lavoro prende ispirazione dalla radioestesia, pratica che tenta di percepire energie o radiazioni invisibili. In questo contesto, la luce diventa il mezzo attraverso cui si manifesta l’invisibile.
-      </p>
-      <p><em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, quando contempliamo le bianche profondità della Via Lattea? O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – un incolore onnicolore d’ateismo dal quale rifuggiamo?…” — <strong>Herman Melville, Moby Dick</strong></em></p>
-      <p>Ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank">Premio Combat Prize 2022</a>.</p>
-    </div>
-
-    <div class="slider">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_progetto1_fotografia/cover.jpg" alt="Cover fotografia">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_progetto1_fotografia/img1.jpg" alt="foto1">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_progetto1_fotografia/img2.jpg" alt="foto2">
-      <!-- aggiungi fino a img16 -->
-    </div>
-  </section>
-
-  <!-- PROGETTO 2 - PREMIO ROMETTI CERAMICA -->
-  <section class="project" id="ceramica">
-    <h2>Premio Rometti — Ceramica</h2>
-    <div class="description">
-      <p>
-        Partecipazione al bando dell’azienda Rometti in Umbria. Il progetto nasce dall’osservazione delle forme naturali e si ispira al lavoro del fotografo tedesco Karl Blossfeldt, 
-        che indagava “la formula dei rapporti segreti tra l’arte e la natura”. 
-        Le opere reinterpretano la morfologia vegetale, in particolare l’equiseto, traducendo la sua struttura ritmica e proporzionale in un oggetto ceramico.
+        Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, 
+        presentando una natura intrinsecamente artistica, produttrice di forme organiche e funzionali. 
+        Le sue immagini svelano una ritmicità geometrica nella crescita delle piante, una logica interna che unisce estetica e necessità vitale.
       </p>
       <p>
-        L’idea alla base è il recupero dell’elemento naturale per cercare un equilibrio tra artificio e natura, tra oggettualità e naturalità. 
-        Il materiale argilloso, plasmato e poi sottratto nella fase di rifinitura, diventa la sintesi del fiore stesso, in un gesto che unisce materia e forma.
+        Gli <em>equiseti</em> fotografati da Blossfeldt, isolati dal loro contesto naturale, diventano simboli di una forma ornamentale, 
+        di una natura che si manifesta come arte. 
+        La mia ricerca parte da qui: dal desiderio di recuperare l’elemento naturale per ricrearne l’equilibrio tra <strong>artificio e natura</strong>, 
+        tra oggettualità e organicità. 
+      </p>
+      <p>
+        Il materiale argilloso, modellato e lavorato con sottrazioni successive dopo la tornitura, traduce in forma le <em>dilatazioni e contrazioni</em> tipiche del fiore di equiseto. 
+        Ogni vaso diventa così la sintesi plastica della pianta, un oggetto che trattiene la memoria del gesto e della materia naturale da cui nasce.
+      </p>
+      <p>
+        Il progetto è stato realizzato per la partecipazione al 
+        <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Rometti</a>, 
+        promosso dall’azienda Rometti in Umbria.
       </p>
     </div>
 
-    <div class="slider">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_premio_rometti_ceramica/cover.jpg" alt="Cover ceramica">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_premio_rometti_ceramica/img1.jpg" alt="ceramica1">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_premio_rometti_ceramica/img2.jpg" alt="ceramica2">
-      <!-- fino a img6 -->
-    </div>
-  </section>
-
-  <!-- PROGETTO 3 - OREFICERIA -->
-  <section class="project" id="oreficeria">
-    <h2>Progetto di Oreficeria — “Forme Marine”</h2>
-    <div class="description">
+    <!-- PROGETTO OREFICERIA -->
+    <div class="portfolio-item">
+      <h3>Progetto di Oreficeria — Forme Marine</h3>
+      <div class="portfolio-slider">
+        <img src="progetto2_oreficeria/cover.jpg">
+        <img src="progetto2_oreficeria/img1.jpg">
+        <img src="progetto2_oreficeria/img2.jpg">
+        <img src="progetto2_oreficeria/img3.jpg">
+        <img src="progetto2_oreficeria/img4.jpg">
+        <img src="progetto2_oreficeria/img5.jpg">
+        <img src="progetto2_oreficeria/img6.jpg">
+        <img src="progetto2_oreficeria/img7.jpg">
+      </div>
       <p>
-        Serie di anelli ispirati alle forme naturali marine, realizzati interamente a mano con la tecnica della cera persa. 
-        Ogni pezzo nasce come un piccolo organismo scultoreo, che evoca conchiglie, coralli e strutture organiche. 
-        La materia si modella con gesti intuitivi, dando vita a forme fluide e irregolari che raccontano il dialogo tra natura e artificio.
+        Una collezione di anelli ispirati alle <strong>forme naturali marine</strong>, realizzati interamente a mano attraverso la tecnica della <em>cera persa</em>. 
+        Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, 
+        trasformando la materia in preziosa testimonianza del mondo sommerso.
+      </p>
+      <p>
+        Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche, 
+        unendo la sensibilità del design contemporaneo alla manualità dell’artigianato orafa. 
+        Il progetto esplora il confine tra natura e artificio, corpo e superficie, oggetto e ornamento.
       </p>
     </div>
 
-    <div class="slider">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_progetto2_oreficeria/cover.jpg" alt="Cover oreficeria">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_progetto2_oreficeria/img1.jpg" alt="oreficeria1">
-      <img src="https://raw.githubusercontent.com/tuonomeutente/tuorepository/main/_progetto2_oreficeria/img2.jpg" alt="oreficeria2">
-      <!-- fino a img7 -->
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Lucrezia Dori — <a href="https://www.instagram.com/luceatelier" target="_blank">Instagram</a> | <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank">Premio Combat</a></p>
-  </footer>
-
-</body>
-</html>
+  </div>
+</section>
