--- a/index.html
+++ b/index.html
@@ -1,128 +1,246 @@
-<!-- ===================== -->
-<!--       PORTFOLIO      -->
-<!-- ===================== -->
-<section id="portfolio">
-  <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
-    <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lucrezia Dori – Portfolio e Curriculum</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #ffffff;
+      color: #1e1e1e;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      scroll-behavior: smooth;
+    }
 
-    <!-- PROGETTO TESI -->
-    <div class="portfolio-item">
-      <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
-      <div class="portfolio-slider">
-        <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+    header {
+      text-align: center;
+      padding: 80px 20px 40px;
+    }
+
+    header h1 {
+      font-size: 2.8rem;
+      font-weight: 600;
+      margin-bottom: 0.2rem;
+      letter-spacing: 1px;
+      color: #2f3e35;
+    }
+
+    header h2 {
+      font-size: 1.2rem;
+      font-weight: 300;
+      color: #5e6e61;
+    }
+
+    .contact {
+      margin-top: 20px;
+      font-size: 0.95rem;
+      color: #444;
+    }
+
+    a {
+      color: #5a7b5d;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    section {
+      max-width: 950px;
+      margin: 60px auto;
+      padding: 0 25px;
+    }
+
+    section h2 {
+      font-size: 1.3rem;
+      letter-spacing: 2px;
+      border-bottom: 2px solid #c8d8c2;
+      padding-bottom: 8px;
+      color: #2f3e35;
+    }
+
+    ul { list-style: none; padding: 0; }
+    li { margin-bottom: 10px; }
+
+    /* PORTFOLIO */
+    #portfolio {
+      background-color: #f9f9f7;
+      padding: 70px 0;
+    }
+
+    .portfolio-slider {
+      display: flex;
+      overflow-x: auto;
+      gap: 12px;
+      scroll-behavior: smooth;
+      padding-bottom: 10px;
+    }
+
+    .portfolio-slider::-webkit-scrollbar {
+      height: 8px;
+    }
+    .portfolio-slider::-webkit-scrollbar-thumb {
+      background: #c5d3c2;
+      border-radius: 10px;
+    }
+
+    .portfolio-slider img {
+      height: 400px;
+      border-radius: 12px;
+      object-fit: cover;
+    }
+
+    .portfolio-item {
+      margin-bottom: 80px;
+    }
+
+    .portfolio-item h3 {
+      color: #2f3e35;
+      font-size: 1.4rem;
+    }
+
+    .portfolio-item p {
+      color: #4f5d4f;
+      line-height: 1.6;
+      font-weight: 300;
+    }
+
+    .download-btn {
+      display: inline-block;
+      margin-top: 15px;
+      background-color: #8fae91;
+      color: white;
+      padding: 10px 22px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+
+    .download-btn:hover {
+      background-color: #7da480;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: #777;
+      padding: 40px 10px;
+      margin-top: 60px;
+      border-top: 1px solid #eee;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>Lucrezia Dori</h1>
+    <h2>Designer / 3D Artist</h2>
+    <p class="contact">
+      📞 339 33133592 · 📧 <a href="mailto:lucrezia.dori99@gmail.com">lucrezia.dori99@gmail.com</a><br>
+      📍 Cavriglia (AR) · 19/02/1999
+    </p>
+  </header>
+
+  <section>
+    <h2>Profilo personale</h2>
+    <p>Designer con formazione artistica e accademica in Interior e Product Design. Appassionata di visualizzazione 3D e progettazione creativa, unisco precisione tecnica e sensibilità estetica per realizzare progetti funzionali e visivamente accattivanti.</p>
+  </section>
+
+  <section>
+    <h2>Esperienze lavorative</h2>
+    <h3>3D Artist — LuceAtelier (2023 – Presente)</h3>
+    <ul>
+      <li>Modellazione e rendering 3D per progetti di interior design e architettura.</li>
+      <li>Utilizzo di 3ds Max e V-Ray come motore di rendering.</li>
+      <li>Profilo Instagram dello studio: <a href="https://www.instagram.com/_luce.atelier/" target="_blank">@_luce.atelier</a></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Istruzione</h2>
+    <ul>
+      <li><strong>Diploma Accademico in Design</strong> – Accademia di Belle Arti di Firenze (2019–2023) — <strong>110 e lode</strong></li>
+      <li><strong>Diploma di Maturità Artistica</strong> – Liceo Artistico “Piero della Francesca”, Arezzo — <strong>98/100</strong></li>
+    </ul>
+  </section>
+
+  <!-- ===================== -->
+  <!--       PORTFOLIO      -->
+  <!-- ===================== -->
+  <section id="portfolio">
+    <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
+      <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
+
+      <!-- PROGETTO TESI -->
+      <div class="portfolio-item">
+        <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
+        <div class="portfolio-slider">
+          <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+        </div>
+        <p>La mia tesi esplora il design come pratica di riparazione, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologica. Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione.</p>
+        <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
       </div>
-      <p>
-        La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico, ma anche come processo sociale, culturale ed ecologico. 
-        Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, 
-        ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione.
-      </p>
-      <p>
-        Il progetto propone il design come <em>atto di cura</em>, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità. 
-        La ricerca si muove tra riflessione teorica e sperimentazione progettuale, individuando nel gesto del riparare un valore poetico e politico, 
-        un modo per comprendere la complessità del nostro tempo e generare nuove forme di equilibrio tra uomo e natura.
-      </p>
-      <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
-    </div>
 
-    <!-- PROGETTO FOTOGRAFIA -->
-    <div class="portfolio-item">
-      <h3>Progetto Fotografico — Autoritratti e Luce</h3>
-      <div class="portfolio-slider">
-        <img src="progetto1_fotografia/cover.jpg">
-        <img src="progetto1_fotografia/img2.jpg">
-        <img src="progetto1_fotografia/img3.jpg">
-        <img src="progetto1_fotografia/img4.jpg">
-        <img src="progetto1_fotografia/img5.jpg">
-        <img src="progetto1_fotografia/img6.jpg">
-        <img src="progetto1_fotografia/img9.jpg">
-        <img src="progetto1_fotografia/img10.jpg">
-        <img src="progetto1_fotografia/img12.jpg">
-        <img src="progetto1_fotografia/img13.jpg">
-        <img src="progetto1_fotografia/img14.jpg">
+      <!-- PROGETTO FOTOGRAFIA -->
+      <div class="portfolio-item">
+        <h3>Progetto Fotografico — Autoritratti e luce</h3>
+        <div class="portfolio-slider">
+          <img src="progetto1_fotografia/cover.jpg">
+          <img src="progetto1_fotografia/img2.jpg">
+          <img src="progetto1_fotografia/img3.jpg">
+          <img src="progetto1_fotografia/img4.jpg">
+          <img src="progetto1_fotografia/img5.jpg">
+          <img src="progetto1_fotografia/img6.jpg">
+          <img src="progetto1_fotografia/img9.jpg">
+          <img src="progetto1_fotografia/img10.jpg">
+          <img src="progetto1_fotografia/img12.jpg">
+          <img src="progetto1_fotografia/img13.jpg">
+          <img src="progetto1_fotografia/img14.jpg">
+        </div>
+        <p>Autoritratti in cui la luce del sole rimbalza su uno specchio generando riflessi completamente bianchi. Un non-colore che racchiude tutti i colori dello spettro.<br>
+        <em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo…”</em> — <strong>Herman Melville, Moby Dick, cap. 42</strong><br>
+        Partecipazione al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank">Premio Combat Prize</a>.</p>
       </div>
-      <p>
-        Il progetto nasce da una riflessione sulla <strong>radioestesia</strong> — una pratica antica che consiste nel tentare di percepire radiazioni o energie invisibili attraverso strumenti come il pendolo o la verga. 
-        Nata come ricerca sul campo dell’invisibile, la radioestesia evoca un gesto percettivo, un ascolto silenzioso e intuitivo della materia e della luce.
-      </p>
-      <p>
-        Attraverso una serie di <em>autoritratti</em>, utilizzo uno specchio come strumento per riflettere la luce del sole. 
-        Il riflesso, completamente bianco, diventa un <strong>non-colore</strong>, che però contiene in sé tutti i colori dello spettro. 
-        In stampa, il bianco si trasforma in assenza visiva, evocando un’immagine che esiste soltanto come presenza luminosa: 
-        un dialogo tra corpo, spazio e materia immateriale.
-      </p>
-      <p>
-        <em>
-          “È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, 
-          quando contempliamo le bianche profondità della Via Lattea? 
-          O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; 
-          è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – 
-          un incolore onnicolore d’ateismo dal quale rifuggiamo?…”
-        </em><br>
-        — <strong>Herman Melville, Moby Dick, capitolo 42</strong>
-      </p>
-      <p>
-        Il progetto ha partecipato al 
-        <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
-      </p>
-    </div>
 
-    <!-- PREMIO ROMETTI -->
-    <div class="portfolio-item">
-      <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
-      <div class="portfolio-slider">
-        <img src="premio_rometti_ceramica/cover.jpg">
-        <img src="premio_rometti_ceramica/img1.jpg">
-        <img src="premio_rometti_ceramica/img3.jpg">
-        <img src="premio_rometti_ceramica/img4.jpg">
-        <img src="premio_rometti_ceramica/img5.jpg">
-        <img src="premio_rometti_ceramica/img6.jpg">
+      <!-- PREMIO ROMETTI -->
+      <div class="portfolio-item">
+        <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
+        <div class="portfolio-slider">
+          <img src="premio_rometti_ceramica/cover.jpg">
+          <img src="premio_rometti_ceramica/img1.jpg">
+          <img src="premio_rometti_ceramica/img3.jpg">
+          <img src="premio_rometti_ceramica/img4.jpg">
+          <img src="premio_rometti_ceramica/img5.jpg">
+          <img src="premio_rometti_ceramica/img6.jpg">
+        </div>
+        <p>Progetto realizzato per il bando Rometti, in Umbria. L’opera si ispira alle forme vegetali fotografate da Karl Blossfeldt, reinterpretando il fiore dell’equiseto come vaso tornito. La materia naturale dell’argilla diventa forma simbolica, un equilibrio tra artificio e natura.</p>
       </div>
-      <p>
-        Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, 
-        presentando una natura intrinsecamente artistica, produttrice di forme organiche e funzionali. 
-        Le sue immagini svelano una ritmicità geometrica nella crescita delle piante, una logica interna che unisce estetica e necessità vitale.
-      </p>
-      <p>
-        Gli <em>equiseti</em> fotografati da Blossfeldt, isolati dal loro contesto naturale, diventano simboli di una forma ornamentale, 
-        di una natura che si manifesta come arte. 
-        La mia ricerca parte da qui: dal desiderio di recuperare l’elemento naturale per ricrearne l’equilibrio tra <strong>artificio e natura</strong>, 
-        tra oggettualità e organicità. 
-      </p>
-      <p>
-        Il materiale argilloso, modellato e lavorato con sottrazioni successive dopo la tornitura, traduce in forma le <em>dilatazioni e contrazioni</em> tipiche del fiore di equiseto. 
-        Ogni vaso diventa così la sintesi plastica della pianta, un oggetto che trattiene la memoria del gesto e della materia naturale da cui nasce.
-      </p>
-      <p>
-        Il progetto è stato realizzato per la partecipazione al 
-        <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Rometti</a>, 
-        promosso dall’azienda Rometti in Umbria.
-      </p>
-    </div>
 
-    <!-- PROGETTO OREFICERIA -->
-    <div class="portfolio-item">
-      <h3>Progetto di Oreficeria — Forme Marine</h3>
-      <div class="portfolio-slider">
-        <img src="progetto2_oreficeria/cover.jpg">
-        <img src="progetto2_oreficeria/img1.jpg">
-        <img src="progetto2_oreficeria/img2.jpg">
-        <img src="progetto2_oreficeria/img3.jpg">
-        <img src="progetto2_oreficeria/img4.jpg">
-        <img src="progetto2_oreficeria/img5.jpg">
-        <img src="progetto2_oreficeria/img6.jpg">
-        <img src="progetto2_oreficeria/img7.jpg">
+      <!-- PROGETTO OREFICERIA -->
+      <div class="portfolio-item">
+        <h3>Progetto di Oreficeria — Forme naturali marine</h3>
+        <div class="portfolio-slider">
+          <img src="progetto2_oreficeria/cover.jpg">
+          <img src="progetto2_oreficeria/img1.jpg">
+          <img src="progetto2_oreficeria/img2.jpg">
+          <img src="progetto2_oreficeria/img3.jpg">
+          <img src="progetto2_oreficeria/img4.jpg">
+          <img src="progetto2_oreficeria/img5.jpg">
+          <img src="progetto2_oreficeria/img6.jpg">
+          <img src="progetto2_oreficeria/img7.jpg">
+        </div>
+        <p>Serie di anelli realizzati a mano con la tecnica della cera persa, ispirati a forme organiche marine. Ogni pezzo rappresenta un piccolo ecosistema di materia e luce.</p>
       </div>
-      <p>
-        Una collezione di anelli ispirati alle <strong>forme naturali marine</strong>, realizzati interamente a mano attraverso la tecnica della <em>cera persa</em>. 
-        Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, 
-        trasformando la materia in preziosa testimonianza del mondo sommerso.
-      </p>
-      <p>
-        Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche, 
-        unendo la sensibilità del design contemporaneo alla manualità dell’artigianato orafa. 
-        Il progetto esplora il confine tra natura e artificio, corpo e superficie, oggetto e ornamento.
-      </p>
     </div>
+  </section>
 
-  </div>
-</section>
+  <footer>
+    © 2025 Lucrezia Dori — Tutti i diritti riservati
+  </footer>
+</body>
+</html>
